k8s-modules/webapp2-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapp2
spec:
  replicas: 2
  selector:
    matchLabels:
      app: webapp2
  template:
    metadata:
      labels:
        app: webapp2
    spec:
      containers:
      - name: webapp2
        image: gcr.io/google-samples/hello-app:2.0
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: webapp2-service
spec:
  selector:
    app: webapp2
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
  type: NodePort
